<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"
        android:onClick="refresh" />
    
    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_move"
        android:onClick="goToMove" />

    <item
        android:id="@+id/action_summary"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_summary"
        android:onClick="goToSummary" />
    
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_accounts"
        android:onClick="goToAccounts" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_settings"
        android:onClick="goToSettings" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"
        android:onClick="logout" />

</menu>
