<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/settings_warning" />
    
	<View android:layout_width="fill_parent" android:layout_height="35dp" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		<CheckBox
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/use_categories" />		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/use_categories" />
		
	</LinearLayout>

	<View android:layout_width="fill_parent" android:layout_height="35dp" />
	
	<Button 
        android:text="@string/save"
 		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="saveSettings" />
		
</LinearLayout>
