<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Move"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

	    
   	    <TextView 
	        android:id="@+id/description_label"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/description" />
	
   	    <EditText 
	        android:id="@+id/description"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
   	    
   	    	 
   	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="35dp" />


   	    <TextView
	        android:id="@+id/date_label"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/date" />
   	    
   	    <LinearLayout
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	   	    <EditText 
		 		android:layout_width="0dp"
		 		android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:id="@+id/date"
		        android:inputType="date"/>
	   	    <Button 
	   	        android:text="@string/pick_date"
	   	        android:textSize="12sp"
		 		android:layout_width="wrap_content"
		 		android:layout_height="wrap_content"
		        android:onClick="showDatePicker" />
   	    </LinearLayout>
   	    
   	    	 
   	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="35dp" />

   	    	    
   	    <TextView 
	        android:id="@+id/category_label"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/category" />
	
	   	<Spinner
	        android:id="@+id/category"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
   	    
   	    	 
   	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="35dp" />
	   		    
	   	
	    <TextView
	        android:id="@+id/nature_label"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/nature" />

   	    <LinearLayout
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		    <Spinner
		        android:id="@+id/nature"
		 		android:layout_width="0dp"
		 		android:layout_weight="1"
		        android:layout_height="wrap_content" />
		    
		    <Spinner
		        android:id="@+id/account"
		 		android:layout_width="0dp"
		 		android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:visibility="gone" />
	    </LinearLayout>
	    	    	    
   	    	 
   	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="35dp" />
	    

   	    <TextView
	        android:id="@+id/value_label"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/value" />
		    
   	    
   	    <LinearLayout
   	        android:id="@+id/simple_value"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	 	   	<EditText 
		        android:id="@+id/value"
		 		android:layout_width="0dp"
		 		android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal" />
	   	    <Button 
	   	        android:text="@string/use_detailed"
	   	        android:textSize="12sp"
		 		android:layout_width="wrap_content"
		 		android:layout_height="wrap_content"
		        android:onClick="useDetailed" />
   	    </LinearLayout>
		    
   	    
   	    <LinearLayout
   	        android:id="@+id/detailed_value"
	 		android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:visibility="gone">
	   	    
	   	    <Button 
	   	        android:text="@string/use_simple"
	   	        android:textSize="12sp"
		 		android:layout_width="fill_parent"
		 		android:layout_height="wrap_content"
		        android:onClick="useSimple" />
	   	    
	   	    <LinearLayout
		 		android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		   	    
		   	    <TextView 
		   	        android:text="@string/description"
		   	        android:textSize="12sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="4"
			        android:layout_height="wrap_content" />
		 	   	<TextView 
		   	        android:text="@string/amount"
		   	        android:textSize="12sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="1"
			 		android:gravity="center"
			        android:layout_height="wrap_content" />
		 	   	<TextView 
		   	        android:text="@string/value"
		   	        android:textSize="12sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="2"
			 		android:gravity="center"
			        android:layout_height="wrap_content" />
		   	    <View 
			 		android:layout_width="0dp"
			 		android:layout_weight="1"
			 		android:layout_height="wrap_content" />
		   	    
	   	    </LinearLayout>
	   	    
	   	    <LinearLayout
		 		android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		   	    
		   	    <EditText 
			        android:id="@+id/detail_description"
		   	        android:textSize="14sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="4"
			        android:layout_height="wrap_content"
			        android:inputType="text" />
		 	   	<EditText 
			        android:id="@+id/detail_amount"
		   	        android:textSize="14sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="1"
			        android:layout_height="wrap_content"
			        android:inputType="number" />
		 	   	<EditText 
			        android:id="@+id/detail_value"
		   	        android:textSize="14sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="2"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
		   	    <Button 
		   	        android:text="@string/add_detail"
		   	        android:textSize="12sp"
			 		android:layout_width="0dp"
			 		android:layout_weight="1"
			 		android:layout_height="wrap_content"
			        android:onClick="addDetail" />
		   	    
	   	    </LinearLayout>
	   	    	   	    
   	    </LinearLayout>
   	    	    
	    	    
	</LinearLayout>
</ScrollView>